--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@
 .g1{
     box-shadow: 2px red;
 }
+
+.g2{
+    background-color: aqua;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
