--- a/style.css
+++ b/style.css
@@ -11,3 +11,7 @@
     background-color: aqua;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.silver{
+    background-color: azure;
+}
