--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@
 .silver{
     background-color: azure;
 }
+
+.silver2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
